feat: feat add new function generate classes
feat: feat add new function generate classes